bk_ida/gobmkida/g3/report_dragon
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/report_dragon/src/engine/dragon.c:2737:14: error: expected ';' at end of declaration
void *__ptr32 *v11; // rdx 
             ^
             ;
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/report_dragon/src/engine/dragon.c:2738:7: error: redefinition of '__ptr32'
void *__ptr32 *v12; // rdx 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/report_dragon/src/engine/dragon.c:2737:7: note: previous definition is here
void *__ptr32 *v11; // rdx 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/report_dragon/src/engine/dragon.c:2738:14: error: expected ';' at end of declaration
void *__ptr32 *v12; // rdx 
             ^
             ;
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/report_dragon/src/engine/dragon.c:2774:15: error: expected ')'
v11 = ( void *__ptr32 *)&unk_4AF5DA; 
              ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/report_dragon/src/engine/dragon.c:2774:7: note: to match this '('
v11 = ( void *__ptr32 *)&unk_4AF5DA; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/report_dragon/src/engine/dragon.c:2774:26: error: use of undeclared identifier 'unk_4AF5DA'
v11 = ( void *__ptr32 *)&unk_4AF5DA; 
                         ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/report_dragon/src/engine/dragon.c:2774:1: error: use of undeclared identifier 'v11'
v11 = ( void *__ptr32 *)&unk_4AF5DA; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/report_dragon/src/engine/dragon.c:2776:1: error: use of undeclared identifier 'v11'
v11 = &off_4AF5D6; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/report_dragon/src/engine/dragon.c:2776:8: error: use of undeclared identifier 'off_4AF5D6'
v11 = &off_4AF5D6; 
       ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/report_dragon/src/engine/dragon.c:2777:48: error: use of undeclared identifier 'v11'
fprintf_0( outfile, "owl_attack_certain %s\n", v11); 
                                               ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/report_dragon/src/engine/dragon.c:2780:15: error: expected ')'
v12 = ( void *__ptr32 *)&unk_4AF5DA; 
              ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/report_dragon/src/engine/dragon.c:2780:7: note: to match this '('
v12 = ( void *__ptr32 *)&unk_4AF5DA; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/report_dragon/src/engine/dragon.c:2780:26: error: use of undeclared identifier 'unk_4AF5DA'
v12 = ( void *__ptr32 *)&unk_4AF5DA; 
                         ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/report_dragon/src/engine/dragon.c:2780:1: error: use of undeclared identifier 'v12'
v12 = ( void *__ptr32 *)&unk_4AF5DA; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/report_dragon/src/engine/dragon.c:2782:1: error: use of undeclared identifier 'v12'
v12 = &off_4AF5D6; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/report_dragon/src/engine/dragon.c:2782:8: error: use of undeclared identifier 'off_4AF5D6'
v12 = &off_4AF5D6; 
       ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/report_dragon/src/engine/dragon.c:2783:49: error: use of undeclared identifier 'v12'
fprintf_0( outfile, "owl_defense_certain %s\n", v12); 
                                                ^
15 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/report_dragon/src/obj/1/dragon.o] Error 1
